--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,20 @@
       content="Learn how Lingerie by Sisioyin collects, uses, and protects your personal information."
     />
     <meta name="theme-color" content="#be185d" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Privacy Policy | Lingerie by Sisioyin" />
+    <meta
+      property="og:description"
+      content="Learn how Lingerie by Sisioyin collects, uses, and protects your personal information."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/img/og-image.png" />
+    <meta
+      property="og:url"
+      content="https://lingeriebysisioyin.store/privacy.html"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
@@ -19,7 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -31,370 +45,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
-
-    <style>
-      /* Legal Page Styles */
-      .legal-page {
-        min-height: 100vh;
-        background: var(--bg-muted);
-      }
-
-      .legal-hero {
-        background: linear-gradient(
-          135deg,
-          var(--clr-primary),
-          var(--clr-primary-dark, #9d174d)
-        );
-        padding: calc(var(--header-height) + var(--space-8)) 0 var(--space-10);
-        text-align: center;
-        color: white;
-      }
-
-      .legal-hero-icon {
-        width: 80px;
-        height: 80px;
-        background: rgba(255, 255, 255, 0.15);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto var(--space-4);
-        font-size: 2rem;
-      }
-
-      .legal-hero-title {
-        font-family: var(--ff-display);
-        font-size: var(--fs-3xl);
-        font-weight: 700;
-        margin-bottom: var(--space-2);
-      }
-
-      .legal-hero-updated {
-        font-size: var(--fs-sm);
-        opacity: 0.9;
-      }
-
-      .legal-main {
-        padding: var(--space-8) 0 var(--space-16);
-      }
-
-      .legal-layout {
-        display: grid;
-        gap: var(--space-8);
-      }
-
-      @media (min-width: 1024px) {
-        .legal-layout {
-          grid-template-columns: 280px 1fr;
-          align-items: start;
-        }
-      }
-
-      .legal-toc {
-        background: var(--bg-surface);
-        border-radius: var(--radius-2xl);
-        border: 2px solid var(--border-light);
-        padding: var(--space-6);
-        position: sticky;
-        top: 100px;
-      }
-
-      .legal-toc-title {
-        font-weight: 600;
-        color: var(--text-primary);
-        margin-bottom: var(--space-4);
-        padding-bottom: var(--space-3);
-        border-bottom: 1px solid var(--border-light);
-      }
-
-      .legal-toc-list {
-        display: flex;
-        flex-direction: column;
-        gap: var(--space-2);
-      }
-
-      .legal-toc-link {
-        display: flex;
-        align-items: center;
-        gap: var(--space-2);
-        padding: var(--space-2) var(--space-3);
-        border-radius: var(--radius-md);
-        font-size: var(--fs-sm);
-        color: var(--text-secondary);
-        text-decoration: none;
-        transition: all 0.2s;
-      }
-
-      .legal-toc-link:hover,
-      .legal-toc-link.active {
-        background: var(--bg-muted);
-        color: var(--clr-primary);
-      }
-
-      .legal-toc-link i {
-        width: 16px;
-        text-align: center;
-        font-size: var(--fs-xs);
-      }
-
-      .legal-content {
-        background: var(--bg-surface);
-        border-radius: var(--radius-2xl);
-        border: 2px solid var(--border-light);
-        padding: var(--space-8);
-      }
-
-      .legal-intro {
-        padding-bottom: var(--space-6);
-        margin-bottom: var(--space-6);
-        border-bottom: 1px solid var(--border-light);
-      }
-
-      .legal-intro p {
-        color: var(--text-secondary);
-        line-height: 1.8;
-        margin-bottom: var(--space-3);
-      }
-
-      .legal-section {
-        margin-bottom: var(--space-10);
-        scroll-margin-top: 120px;
-      }
-
-      .legal-section:last-child {
-        margin-bottom: 0;
-      }
-
-      .legal-section-title {
-        font-family: var(--ff-display);
-        font-size: var(--fs-xl);
-        font-weight: 700;
-        color: var(--text-primary);
-        margin-bottom: var(--space-4);
-        display: flex;
-        align-items: center;
-        gap: var(--space-3);
-      }
-
-      .legal-section-title i {
-        color: var(--clr-primary);
-        font-size: var(--fs-lg);
-      }
-
-      .legal-section p {
-        color: var(--text-secondary);
-        line-height: 1.8;
-        margin-bottom: var(--space-4);
-      }
-
-      .legal-section ul {
-        color: var(--text-secondary);
-        line-height: 1.8;
-        margin: var(--space-4) 0;
-        padding-left: var(--space-6);
-      }
-
-      .legal-section li {
-        margin-bottom: var(--space-2);
-      }
-
-      .legal-section a {
-        color: var(--clr-primary);
-        font-weight: 500;
-      }
-
-      .legal-highlight {
-        background: var(--bg-muted);
-        border-left: 4px solid var(--clr-primary);
-        padding: var(--space-4) var(--space-5);
-        border-radius: 0 var(--radius-lg) var(--radius-lg) 0;
-        margin: var(--space-4) 0;
-      }
-
-      .legal-highlight p {
-        margin: 0;
-        font-weight: 500;
-        color: var(--text-primary);
-      }
-
-      .legal-contact {
-        background: linear-gradient(
-          135deg,
-          var(--clr-primary),
-          var(--clr-primary-dark, #9d174d)
-        );
-        border-radius: var(--radius-xl);
-        padding: var(--space-6);
-        color: white;
-        text-align: center;
-        margin-top: var(--space-8);
-      }
-
-      .legal-contact h3 {
-        font-size: var(--fs-lg);
-        font-weight: 600;
-        margin-bottom: var(--space-2);
-      }
-
-      .legal-contact p {
-        opacity: 0.9;
-        margin-bottom: var(--space-4);
-        color: white;
-      }
-
-      @media (max-width: 1023px) {
-        .legal-toc {
-          position: relative;
-          top: 0;
-        }
-      }
-
-      /* Fix hero padding for fixed header */
-      .legal-hero {
-        padding-top: calc(80px + var(--space-16));
-      }
-
-      /* WhatsApp Widget Modern Styles */
-      .whatsapp-float {
-        position: fixed;
-        bottom: var(--space-6);
-        right: var(--space-6);
-        z-index: 1000;
-      }
-
-      .whatsapp-float-btn {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background: linear-gradient(135deg, #25d366 0%, #128c7e 100%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        font-size: 1.75rem;
-        box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4);
-        transition: all 0.3s ease;
-        text-decoration: none;
-        position: relative;
-      }
-
-      .whatsapp-float-btn:hover {
-        transform: scale(1.1) translateY(-2px);
-        box-shadow: 0 6px 30px rgba(37, 211, 102, 0.5);
-        color: white;
-      }
-
-      .whatsapp-float-btn::before {
-        content: "";
-        position: absolute;
-        inset: -3px;
-        border-radius: 50%;
-        background: linear-gradient(135deg, #25d366 0%, #128c7e 100%);
-        z-index: -1;
-        opacity: 0.3;
-        animation: whatsapp-pulse 2s infinite;
-      }
-
-      @keyframes whatsapp-pulse {
-        0%,
-        100% {
-          transform: scale(1);
-          opacity: 0.3;
-        }
-        50% {
-          transform: scale(1.15);
-          opacity: 0;
-        }
-      }
-
-      .whatsapp-tooltip {
-        position: absolute;
-        right: 70px;
-        top: 50%;
-        transform: translateY(-50%);
-        background: var(--bg-surface);
-        color: var(--text-primary);
-        padding: var(--space-2) var(--space-4);
-        border-radius: var(--radius-lg);
-        font-size: var(--fs-sm);
-        font-weight: 500;
-        white-space: nowrap;
-        box-shadow: var(--shadow-lg);
-        opacity: 0;
-        visibility: hidden;
-        transition: all 0.3s ease;
-      }
-
-      .whatsapp-float:hover .whatsapp-tooltip {
-        opacity: 1;
-        visibility: visible;
-      }
-
-      .whatsapp-tooltip::after {
-        content: "";
-        position: absolute;
-        right: -6px;
-        top: 50%;
-        transform: translateY(-50%);
-        border: 6px solid transparent;
-        border-left-color: var(--bg-surface);
-      }
-
-      /* Mobile Nav Theme Toggle Slider */
-      .mobile-theme-toggle {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: var(--space-3);
-        padding: var(--space-4);
-        background: var(--bg-surface-alt);
-        border-radius: var(--radius-xl);
-        margin: var(--space-4);
-      }
-
-      .mobile-theme-toggle i {
-        font-size: 1.1rem;
-        color: var(--text-muted);
-        transition: color 0.2s;
-      }
-
-      .mobile-theme-toggle i.active {
-        color: var(--clr-primary);
-      }
-
-      .theme-slider {
-        position: relative;
-        width: 50px;
-        height: 26px;
-        background: var(--bg-muted);
-        border-radius: var(--radius-full);
-        cursor: pointer;
-        transition: background 0.3s;
-      }
-
-      .theme-slider::before {
-        content: "";
-        position: absolute;
-        top: 3px;
-        left: 3px;
-        width: 20px;
-        height: 20px;
-        background: white;
-        border-radius: 50%;
-        box-shadow: var(--shadow-sm);
-        transition: transform 0.3s;
-      }
-
-      [data-theme="dark"] .theme-slider::before,
-      .dark .theme-slider::before {
-        transform: translateX(24px);
-      }
-
-      [data-theme="dark"] .theme-slider,
-      .dark .theme-slider {
-        background: var(--clr-primary);
-      }
-    </style>
   </head>
 
   <body class="legal-page">
@@ -807,7 +457,9 @@
                 contact us:
               </p>
               <ul>
-                <li><strong>Email:</strong> privacy@lingeriebysisioyin.com</li>
+                <li>
+                  <strong>Email:</strong> privacy@lingeriebysisioyin.store
+                </li>
                 <li><strong>WhatsApp:</strong> +234 903 334 4860</li>
                 <li>
                   <strong>Contact Form:</strong>
@@ -819,10 +471,7 @@
             <div class="legal-contact">
               <h3>Questions About Your Privacy?</h3>
               <p>We're here to help. Contact our team for any concerns.</p>
-              <a
-                href="contact.html"
-                class="btn btn-outline"
-                style="border-color: white; color: white"
+              <a href="contact.html" class="btn btn-outline"
                 ><i class="fa-solid fa-envelope"></i> Contact Us</a
               >
             </div>
@@ -849,10 +498,18 @@
               lingerie and loungewear for the modern woman.
             </p>
             <div class="footer-social">
-              <a href="#" aria-label="Instagram"
+              <a
+                href="https://instagram.com/lingeriebysissioyin"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Instagram"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
-              <a href="#" aria-label="TikTok"
+              <a
+                href="https://tiktok.com/@lingeriebysissioyin"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="TikTok"
                 ><i class="fa-brands fa-tiktok"></i
               ></a>
               <a
@@ -894,13 +551,12 @@
             &copy; <span id="currentYear">2026</span> Lingerie by Sisioyin. All
             rights reserved.
           </p>
-          <div style="display: flex; gap: var(--space-2)" id="themeToggle">
+          <div id="themeToggle">
             <button
               type="button"
               class="btn btn-icon btn-ghost theme-btn"
               data-theme="light"
               aria-label="Light mode"
-              style="width: 36px; height: 36px"
             >
               <i class="fa-solid fa-sun"></i>
             </button>
@@ -909,7 +565,6 @@
               class="btn btn-icon btn-ghost theme-btn"
               data-theme="system"
               aria-label="System theme"
-              style="width: 36px; height: 36px"
             >
               <i class="fa-solid fa-desktop"></i>
             </button>
@@ -918,7 +573,6 @@
               class="btn btn-icon btn-ghost theme-btn"
               data-theme="dark"
               aria-label="Dark mode"
-              style="width: 36px; height: 36px"
             >
               <i class="fa-solid fa-moon"></i>
             </button>
@@ -969,21 +623,6 @@
           </button>
         </div>
       </div>
-    </div>
-
-    <!-- ═══════════════════════════════════════════════════════════════════════
-       WHATSAPP WIDGET
-       ═══════════════════════════════════════════════════════════════════════ -->
-    <div class="whatsapp-float">
-      <span class="whatsapp-tooltip">Chat with us!</span>
-      <a
-        href="https://wa.me/2349033344860?text=Hi%2C%20I%27m%20interested%20in%20your%20products"
-        target="_blank"
-        class="whatsapp-float-btn"
-        aria-label="Chat on WhatsApp"
-      >
-        <i class="fa-brands fa-whatsapp"></i>
-      </a>
     </div>
 
     <!-- ═══════════════════════════════════════════════════════════════════════
@@ -1094,7 +733,7 @@
             <div
               class="g-recaptcha"
               id="loginRecaptcha"
-              data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
             ></div>
           </div>
           <button
@@ -1170,7 +809,7 @@
             <div
               class="g-recaptcha"
               id="signupRecaptcha"
-              data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
+              data-sitekey="6LfhBmMsAAAAAMLoUlm0VlYhc4RLJyscH_YVfs6l"
             ></div>
           </div>
           <button
@@ -1222,26 +861,6 @@
     <script defer src="assets/js/app.js"></script>
     <script defer src="assets/js/auth.js"></script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const tocLinks = document.querySelectorAll(".legal-toc-link");
-        const sections = document.querySelectorAll(".legal-section");
-        const observer = new IntersectionObserver(
-          (entries) => {
-            entries.forEach((entry) => {
-              if (entry.isIntersecting) {
-                tocLinks.forEach((link) => link.classList.remove("active"));
-                const activeLink = document.querySelector(
-                  `.legal-toc-link[href="#${entry.target.id}"]`,
-                );
-                if (activeLink) activeLink.classList.add("active");
-              }
-            });
-          },
-          { threshold: 0.3, rootMargin: "-100px 0px -50% 0px" },
-        );
-        sections.forEach((section) => observer.observe(section));
-      });
-    </script>
+    <script src="assets/js/legal.js"></script>
   </body>
 </html>
